<resources>
    <string name="app_name">ScrollViewyou2</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="tue_22_december_2020">Tue-22 December 2020</string>
    <string name="jefbezoz">/@Jefbezoz</string>
    <string name="jeff_bezos">Jeff bezos</string>
    <string name="pratshukla">/@PratShukla</string>
    <string name="prateek_shukla">Prateek Shukla</string>
    <string name="prateek">Prateek</string>
    <string name="people_to_invite">People to invite</string>
    <string name="_11_30am">11:30am</string>
    <string name="nrupul_dev">Nrupul Dev</string>
    <string name="name">Name</string>
    <string name="notify_people_on_slack">Notify people on Slack ?</string>
    <string name="create_meeting">Create Meeting</string>
</resources>