<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvSchedule"
        style="@style/TextViewSize"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30sp"
        android:text="@string/schedule_meeting"
        android:textAlignment="center"
        android:textSize="25sp"/>
    <TextView
        style="@style/TextViewSize"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        style="@style/TextViewSize"
        android:layout_marginTop="10sp"
        android:text="@string/nrupul_dev"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <View
        style="@style/view2"
        />
    <LinearLayout
        style="@style/customText"
        android:orientation="horizontal">

        <TextView
           style="@style/textView"
            android:text="@string/tue_22_december_2020" />
        <TextView
          style="@style/textView"
            android:text="@string/_11_30am" />

    </LinearLayout>
    <TextView
       style="@style/customText"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/people_to_invite"
        android:textStyle="bold"/>
    <LinearLayout
        style="@style/customText"
        android:orientation="horizontal">
        <TextView
           style="@style/customText"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/prateek"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    <ImageButton
        style="@style/customText"
        android:layout_marginStart="300sp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_search_24"/>
    </LinearLayout>
    <View
        style="@style/view2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/customPics"
            android:background="@drawable/prateek_sukla"/>
        <ImageView
            style="@style/customPics"
            android:background="@drawable/jeff_bezos"/>

    </LinearLayout>
    <View
        style="@style/view"/>
        <LinearLayout
           style="@style/customText"
            android:orientation="horizontal">
            <ImageView
               style="@style/customText"
                android:layout_marginStart="25sp"
                android:layout_marginTop="30sp"
                android:background="@drawable/prateek_sukla"/>
            <TextView
              style="@style/TextViewPic"
                android:text="@string/prateek_shukla"
               />
            <ImageView
                style="@style/customText"
                android:layout_marginStart="5dp"
                android:layout_marginTop="38sp"
                android:src="@drawable/vector"/>
            <TextView
                style="@style/customText"
                android:layout_marginStart="110sp"
                android:layout_marginTop="30sp"
                android:text="@string/pratshukla"/>
        </LinearLayout>
    <View
        style="@style/view"
        android:layout_marginStart="22sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="22sp" />
    <LinearLayout
       style="@style/customText"
        android:orientation="horizontal">
        <ImageView
           style="@style/customText"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:background="@drawable/jeff_bezos"/>
        <TextView
           style="@style/TextViewPic"
            android:text="@string/jeff_bezos"/>
        <TextView
           style="@style/customText"
            android:layout_marginStart="160sp"
            android:layout_marginTop="30sp"
            android:text="@string/jefbezoz"/>
    </LinearLayout>
    <View
        style="@style/view"
        android:layout_marginTop="20sp"/>
    <LinearLayout
        style="@style/customText"
        android:orientation="horizontal">
<TextView
    style="@style/customText"
    android:layout_gravity="center"
    android:layout_marginStart="90sp"
    android:layout_marginEnd="30sp"
    android:text="@string/notify_people_on_slack"
    android:textColor="@color/black"
    android:layout_marginTop="10dp"
    android:textSize="20sp"
    android:textStyle="italic"/>
    <ImageView
       style="@style/customText"
        android:src="@drawable/ic_group__3_"
        android:layout_marginTop="20dp"/>
    </LinearLayout>
    <Button
        style="@style/customText"
        android:layout_gravity="center"
        android:background="#8095FF"
        android:paddingHorizontal="50sp"
        android:layout_marginTop="10dp"
        android:text="@string/create_meeting"
        android:textColor="@color/white"/>
</LinearLayout>